--- a/MSDevUnion.BingWallpaper/BingoWallpaper/App.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper/App.xaml
@@ -1,8 +1,5 @@
-﻿<Application
-    x:Class="BingoWallpaper.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BingoWallpaper"
-    RequestedTheme="Light">
-
-</Application>
+﻿<Application x:Class="BingoWallpaper.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:BingoWallpaper"
+             RequestedTheme="Light"></Application>
