--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
@@ -4,7 +4,63 @@
       xmlns:local="using:BingoWallpaper.UWP.Views"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:converters="using:BingoWallpaper.UWP.Converters"
+      xmlns:fa="using:FontAwesome.UWP"
       mc:Ignorable="d"
       DataContext="{Binding Source={StaticResource Locator},Path=Main}">
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"></Grid>
+    <VisualStateManager.VisualStateGroups>
+        <VisualStateGroup></VisualStateGroup>
+    </VisualStateManager.VisualStateGroups>
+    <Page.Resources>
+        <converters:BooleanInverseConverter x:Key="BooleanInverseConverter" />
+    </Page.Resources>
+    <Page.BottomAppBar>
+        <AppBar x:Name="AppBar"
+                ClosedDisplayMode="Compact"
+                Background="{ThemeResource SystemAccentBrush}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0"></StackPanel>
+                <AppBarButton Grid.Column="1"
+                              x:Uid="/Main/Refresh"
+                              IsCompact="{x:Bind AppBar.IsOpen,Converter={StaticResource BooleanInverseConverter},Mode=OneWay}">
+                    <AppBarButton.Icon>
+                        <fa:FontAwesome Icon="Refresh" />
+                    </AppBarButton.Icon>
+                </AppBarButton>
+                <AppBarButton Grid.Column="2"
+                              x:Uid="/Main/Setting"
+                              IsCompact="{x:Bind AppBar.IsOpen,Converter={StaticResource BooleanInverseConverter},Mode=OneWay}">
+                    <AppBarButton.Icon>
+                        <FontIcon FontFamily="Segoe MDL2 Assets"
+                                  Glyph="&#xE946;" />
+                    </AppBarButton.Icon>
+                </AppBarButton>
+                <AppBarButton Grid.Column="3"
+                              x:Uid="/Main/About"
+                              IsCompact="{x:Bind AppBar.IsOpen,Converter={StaticResource BooleanInverseConverter},Mode=OneWay}">
+                    <AppBarButton.Icon>
+                        <FontIcon Glyph="&#xF1F0;"
+                                  FontFamily="ms-appx:/Assets/Fonts/Material-Design-Iconic-Font.ttf#Material-Design-Iconic-Font"></FontIcon>
+                    </AppBarButton.Icon>
+                </AppBarButton>
+            </Grid>
+        </AppBar>
+    </Page.BottomAppBar>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <!--<FlipView Background="Transparent"></FlipView>-->
+        <FontIcon Glyph="&#xF1F0;"
+                  RenderTransformOrigin="0.5,0.5"
+                  FontFamily="ms-appx:/Assets/Fonts/Material-Design-Iconic-Font.ttf#Material-Design-Iconic-Font">
+            <FontIcon.RenderTransform>
+                <ScaleTransform ScaleX="3"
+                                ScaleY="3"></ScaleTransform>
+            </FontIcon.RenderTransform>
+        </FontIcon>
+    </Grid>
 </Page>
