--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
@@ -1,23 +1,21 @@
 ﻿<Page x:Class="BingoWallpaper.UWP.Views.MainView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:BingoWallpaper.UWP.Views"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:converters="using:BingoWallpaper.UWP.Converters"
       xmlns:fa="using:FontAwesome.UWP"
       mc:Ignorable="d"
       DataContext="{Binding Source={StaticResource Locator},Path=Main}">
-    <VisualStateManager.VisualStateGroups>
+    <!--<VisualStateManager.VisualStateGroups>
         <VisualStateGroup></VisualStateGroup>
-    </VisualStateManager.VisualStateGroups>
+    </VisualStateManager.VisualStateGroups>-->
     <Page.Resources>
         <converters:BooleanInverseConverter x:Key="BooleanInverseConverter" />
     </Page.Resources>
     <Page.BottomAppBar>
         <AppBar x:Name="AppBar"
-                ClosedDisplayMode="Compact"
-                Background="{ThemeResource SystemAccentBrush}">
+                ClosedDisplayMode="Compact">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -55,6 +53,6 @@
         </AppBar>
     </Page.BottomAppBar>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <!--<FlipView Background="Transparent"></FlipView>-->
+        <FlipView Background="Transparent"></FlipView>
     </Grid>
 </Page>
