--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/App.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/App.xaml
@@ -1,13 +1,13 @@
 ﻿<Application x:Class="BingoWallpaper.UWP.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:viewModels="using:BingoWallpaper.UWP.ViewModels">
+             xmlns:viewModel="using:BingoWallpaper.UWP.ViewModel">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="ms-appx:///Styles/BingoWallpaperBrushStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <viewModels:ViewModelLocator x:Key="Locator" />
+            <viewModel:ViewModelLocator x:Key="Locator" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
