--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/View/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/View/MainView.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="BingoWallpaper.UWP.View.MainView"
+﻿<Page x:Class="BingoWallpaper.Uwp.View.MainView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:converters="using:BingoWallpaper.UWP.Converters"
+      xmlns:converters="using:BingoWallpaper.Uwp.Converters"
       xmlns:fa="using:FontAwesome.UWP"
       mc:Ignorable="d"
       DataContext="{Binding Source={StaticResource Locator},Path=Main}">
