--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/View/SettingView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/View/SettingView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="BingoWallpaper.UWP.View.SettingView"
+﻿<Page x:Class="BingoWallpaper.Uwp.View.SettingView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:BingoWallpaper.UWP.View"
