--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/View/DetailView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/View/DetailView.xaml
@@ -1,10 +1,11 @@
-﻿<Page x:Class="BingoWallpaper.Uwp.View.DetailView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      mc:Ignorable="d"
-      DataContext="{Binding Source={StaticResource Locator},Path=Detail}">
+﻿<local:ViewBase x:Class="BingoWallpaper.Uwp.View.DetailView"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:local="using:BingoWallpaper.Uwp.View"
+                mc:Ignorable="d"
+                DataContext="{Binding Source={StaticResource Locator},Path=Detail}">
     <Page.BottomAppBar>
         <CommandBar>
             <CommandBar.SecondaryCommands>
@@ -23,4 +24,4 @@
         </CommandBar>
     </Page.BottomAppBar>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"></Grid>
-</Page>
+</local:ViewBase>
