--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/View/SettingView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/View/SettingView.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="BingoWallpaper.Uwp.View.SettingView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:BingoWallpaper.UWP.View"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      mc:Ignorable="d"
-      DataContext="{Binding Source={StaticResource Locator},Path=Setting}">
+﻿<local:ViewBase x:Class="BingoWallpaper.Uwp.View.SettingView"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:local="using:BingoWallpaper.Uwp.View"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                mc:Ignorable="d"
+                DataContext="{Binding Source={StaticResource Locator},Path=Setting}">
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"></Grid>
-</Page>
+</local:ViewBase>
