--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/DetailView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/DetailView.xaml
@@ -6,6 +6,15 @@
                 xmlns:local="using:BingoWallpaper.Uwp.Views"
                 mc:Ignorable="d"
                 DataContext="{Binding Source={StaticResource Locator},Path=Detail}">
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition>
+                <NavigationThemeTransition.DefaultNavigationTransitionInfo>
+                    <ContinuumNavigationTransitionInfo />
+                </NavigationThemeTransition.DefaultNavigationTransitionInfo>
+            </NavigationThemeTransition>
+        </TransitionCollection>
+    </Page.Transitions>
     <Page.BottomAppBar>
         <CommandBar>
             <CommandBar.SecondaryCommands>
