--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/SettingView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/SettingView.xaml
@@ -4,6 +4,7 @@
                 xmlns:local="using:BingoWallpaper.Uwp.Views"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:system="using:System"
                 mc:Ignorable="d"
                 DataContext="{Binding Source={StaticResource Locator},Path=Setting}">
     <Page.Transitions>
@@ -11,5 +12,31 @@
             <EdgeUIThemeTransition Edge="Right" />
         </TransitionCollection>
     </Page.Transitions>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"></Grid>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <StackPanel Orientation="Vertical">
+                <ComboBox x:Uid="/Setting/SaveLocation"
+                          Margin="10,10,10,0" />
+                <ComboBox x:Uid="/Setting/WallpaperSize"
+                          Margin="10,10,10,0"></ComboBox>
+                <ComboBox x:Uid="/Setting/Area"
+                          Margin="10,10,10,0">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate x:DataType="system:String">
+                            <RelativePanel>
+                                <Image x:Name="FlagImage"
+                                       RelativePanel.AlignLeftWithPanel="True"
+                                       RelativePanel.AlignVerticalCenterWithPanel="True"
+                                       Source="{Binding}" />
+                                <TextBlock RelativePanel.RightOf="FlagImage"
+                                           RelativePanel.AlignVerticalCenterWith="FlagImage"
+                                           Margin="5,0,0,0"
+                                           Text="{Binding}" />
+                            </RelativePanel>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </StackPanel>
+        </ScrollViewer>
+    </Grid>
 </local:ViewBase>
