--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperFlipViewStyle.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperFlipViewStyle.xaml
@@ -2,12 +2,14 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="BingoWallpaperFlipViewStyle"
            TargetType="FlipView">
-        <Setter Property="Template">
+        <Setter Property="Background"
+                Value="Transparent" />
+        <!--<Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="FlipView">
                     <Grid></Grid>
                 </ControlTemplate>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
     </Style>
 </ResourceDictionary>
