--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperScrollBarStyle.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperScrollBarStyle.xaml
@@ -1,2 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"></ResourceDictionary>
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style x:Key="BingoWallpaperVerticalScrollBarStyle"
+           TargetType="ScrollBar"></Style>
+    <Style x:Key="BingoWallpaperHorizontalScrollBarStyle"
+           TargetType="ScrollBar"></Style>
+</ResourceDictionary>
