--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperFlipViewStyle.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperFlipViewStyle.xaml
@@ -1,9 +1,43 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:uwp="using:FontAwesome.UWP"
+                    xmlns:controls="using:BingoWallpaper.Uwp.Controls"
+                    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+                    xmlns:core="using:Microsoft.Xaml.Interactions.Core">
     <Style x:Key="BingoWallpaperFlipViewStyle"
            TargetType="FlipView">
         <Setter Property="Background"
                 Value="Transparent" />
+        <Setter Property="BorderThickness"
+                Value="0" />
+        <Setter Property="TabNavigation"
+                Value="Once" />
+        <Setter Property="IsTabStop"
+                Value="False" />
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility"
+                Value="Hidden" />
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility"
+                Value="Hidden" />
+        <Setter Property="ScrollViewer.IsHorizontalRailEnabled"
+                Value="False" />
+        <Setter Property="ScrollViewer.IsVerticalRailEnabled"
+                Value="False" />
+        <Setter Property="ScrollViewer.IsHorizontalScrollChainingEnabled"
+                Value="True" />
+        <Setter Property="ScrollViewer.IsDeferredScrollingEnabled"
+                Value="False" />
+        <Setter Property="ScrollViewer.BringIntoViewOnFocusChange"
+                Value="True" />
+        <Setter Property="UseSystemFocusVisuals"
+                Value="True" />
+        <Setter Property="ItemsPanel">
+            <Setter.Value>
+                <ItemsPanelTemplate>
+                    <VirtualizingStackPanel AreScrollSnapPointsRegular="True"
+                                            Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="FlipView">
@@ -11,11 +45,76 @@
                           BorderBrush="{TemplateBinding BorderBrush}"
                           BorderThickness="{TemplateBinding BorderThickness}">
                         <Grid.Resources>
-                            <ControlTemplate x:Key="HorizontalNextTemplate"
+                            <ControlTemplate x:Key="HorizontalPreviousTemplate"
                                              TargetType="Button">
+                                <Grid>
+                                    <VisualStateManager.VisualStateGroups>
+                                        <VisualStateGroup x:Name="CommonState">
+                                            <VisualState x:Name="Normal" />
+                                            <VisualState x:Name="PointerOver">
+                                                <VisualState.Setters>
+                                                    <Setter Target="Semicircle.Background"
+                                                            Value="#80000000" />
+                                                </VisualState.Setters>
+                                            </VisualState>
+                                            <VisualState x:Name="Pressed">
+                                                <!--<Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetName="SemicircleScaleTransform"
+                                                                     Storyboard.TargetProperty="ScaleX"
+                                                                     From="1"
+                                                                     To="15"
+                                                                     Duration="0:0:0.3" />
+                                                    <DoubleAnimation Storyboard.TargetName="SemicircleScaleTransform"
+                                                                     Storyboard.TargetProperty="ScaleY"
+                                                                     From="1"
+                                                                     To="15"
+                                                                     Duration="0:0:0.3" />
+                                                </Storyboard>-->
+                                            </VisualState>
+                                            <VisualStateGroup.Transitions>
+                                                <VisualTransition From="Pressed"
+                                                                  To="Normal"
+                                                                  GeneratedDuration="0:0:1">
+                                                    <Storyboard>
+                                                        <DoubleAnimation Storyboard.TargetName="SemicircleScaleTransform"
+                                                                         Storyboard.TargetProperty="ScaleX"
+                                                                         From="1"
+                                                                         To="15"
+                                                                         Duration="0:0:1"></DoubleAnimation>
+                                                        <DoubleAnimation Storyboard.TargetName="SemicircleScaleTransform"
+                                                                         Storyboard.TargetProperty="ScaleY"
+                                                                         From="1"
+                                                                         To="15"
+                                                                         Duration="0:0:1"></DoubleAnimation>
+                                                    </Storyboard>
+                                                </VisualTransition>
+                                            </VisualStateGroup.Transitions>
+                                        </VisualStateGroup>
+                                    </VisualStateManager.VisualStateGroups>
+                                    <Border x:Name="Semicircle"
+                                            CornerRadius="0,20,20,0"
+                                            Background="#40000000"
+                                            RenderTransformOrigin="0,0.5">
+                                        <Border.RenderTransform>
+                                            <ScaleTransform x:Name="SemicircleScaleTransform" />
+                                        </Border.RenderTransform>
+                                    </Border>
+                                    <uwp:FontAwesome Icon="CaretLeft"
+                                                     FontSize="12"
+                                                     Foreground="Black"
+                                                     HorizontalAlignment="Center"
+                                                     VerticalAlignment="Center"
+                                                     MirroredWhenRightToLeft="True"
+                                                     UseLayoutRounding="False" />
+                                </Grid>
                                 <!--TODO-->
                             </ControlTemplate>
-                            <ControlTemplate x:Key="HorizontalPreviousTemplate"
+                            <ControlTemplate x:Key="HorizontalNextTemplate"
+                                             TargetType="Button">
+                                <controls:FlipViewButton></controls:FlipViewButton>
+                                <!--TODO-->
+                            </ControlTemplate>
+                            <ControlTemplate x:Key="VerticalPreviousTemplate"
                                              TargetType="Button">
                                 <!--TODO-->
                             </ControlTemplate>
@@ -23,12 +122,57 @@
                                              TargetType="Button">
                                 <!--TODO-->
                             </ControlTemplate>
-                            <ControlTemplate x:Key="VerticalPreviousTemplate"
-                                             TargetType="Button">
-                                <!--TODO-->
-                            </ControlTemplate>
                         </Grid.Resources>
-                        <ScrollViewer x:Name="ScrollingHost"></ScrollViewer>
+                        <ScrollViewer x:Name="ScrollingHost"
+                                      VerticalSnapPointsType="MandatorySingle"
+                                      HorizontalSnapPointsType="MandatorySingle"
+                                      HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}"
+                                      HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
+                                      VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}"
+                                      VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}"
+                                      IsHorizontalRailEnabled="{TemplateBinding ScrollViewer.IsHorizontalRailEnabled}"
+                                      IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}"
+                                      IsHorizontalScrollChainingEnabled="{TemplateBinding ScrollViewer.IsHorizontalScrollChainingEnabled}"
+                                      IsVerticalScrollChainingEnabled="{TemplateBinding ScrollViewer.IsVerticalScrollChainingEnabled}"
+                                      IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
+                                      BringIntoViewOnFocusChange="{TemplateBinding ScrollViewer.BringIntoViewOnFocusChange}"
+                                      Padding="{TemplateBinding Padding}"
+                                      ZoomMode="Disabled"
+                                      TabNavigation="{TemplateBinding TabNavigation}"
+                                      IsTabStop="False"
+                                      AutomationProperties.AccessibilityView="Raw">
+                            <ItemsPresenter />
+                        </ScrollViewer>
+                        <Button x:Name="PreviousButtonHorizontal"
+                                Template="{StaticResource HorizontalPreviousTemplate}"
+                                Width="20"
+                                Height="40"
+                                IsTabStop="False"
+                                UseSystemFocusVisuals="False"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center">
+                            <interactivity:Interaction.Behaviors>
+                                <core:EventTriggerBehavior EventName="Click">
+                                    <core:NavigateToPageAction TargetPage="BingoWallpaper.Uwp.Views.AboutView"></core:NavigateToPageAction>
+                                </core:EventTriggerBehavior>
+                            </interactivity:Interaction.Behaviors>
+                        </Button>
+                        <Button x:Name="NextButtonHorizontal"
+                                Template="{StaticResource HorizontalNextTemplate}"
+                                Width="20"
+                                Height="40"
+                                IsTabStop="False"
+                                UseSystemFocusVisuals="False"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center" />
+                        <Button x:Name="PreviousButtonVertical"
+                                IsTabStop="False"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Top" />
+                        <Button x:Name="NextButtonVertical"
+                                IsTabStop="False"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Bottom" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
