--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperScrollBarStyle.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperScrollBarStyle.xaml
@@ -1,7 +1,29 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="BingoWallpaperVerticalScrollBarStyle"
-           TargetType="ScrollBar"></Style>
-    <Style x:Key="BingoWallpaperHorizontalScrollBarStyle"
-           TargetType="ScrollBar"></Style>
+    <Style x:Key="BingoWallpaperScrollBarStyle"
+           TargetType="ScrollBar">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ScrollBar">
+                    <Grid x:Name="Root">
+                        <Grid.Resources></Grid.Resources>
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal"></VisualState>
+                                <VisualState x:Name="PointerOver"></VisualState>
+                                <VisualState x:Name="Disabled"></VisualState>
+                            </VisualStateGroup>
+                            <VisualStateGroup x:Name="ScrollingIndicatorStates">
+                                <VisualState x:Name="TouchIndicator"></VisualState>
+                                <VisualState x:Name="MouseIndicator"></VisualState>
+                                <VisualState x:Name="NoIndicator"></VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Grid x:Name="HorizontalRoot"
+                              IsHitTestVisible="False"></Grid>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
