--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Themes/Generic.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Themes/Generic.xaml
@@ -1,7 +1,23 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:BingoWallpaper.Uwp">
+                    xmlns:local="using:BingoWallpaper.Uwp"
+                    xmlns:controls="using:BingoWallpaper.Uwp.Controls">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///Themes/ImageEx.xaml" />
     </ResourceDictionary.MergedDictionaries>
+    <Style TargetType="controls:FlipViewButton">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:FlipViewButton">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <Rectangle Width="100"
+                                   Height="100"
+                                   Fill="Black"></Rectangle>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
